<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- basic values -->
    <string name="app_name">coupies-framework_lib</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <!-- values for custom dialog -->
    <string name="custom_dialog_progress_text">Your receipt is being uploaded.</string>
    <string name="cashback_image_send_ok_text_1">Receipt successfully send!</string>
    <string name="cashback_image_send_ok_text_2">Your receipt will now be checked and you will receive a notice soon.</string>
    <string name="cashback_image_send_error_text_1">A problem occurred</string>
    <string name="cashback_image_send_error_text_2">Receipt could not be submitted.</string>
    <!-- values for nfc/qr redemtion -->
    <string name="capture_qr_invalid">"The QR-Code could not be read."</string>
    <string name="dialog_no_sticker_title_text">No sticker</string>
    <string name="dialog_no_sticker_body_text">The sticker is not available. Do you want to redeem the coupon anyway?</string>
    <string name="coupon_redemption_hint">"How does it work?"</string>
    <string name="coupon_redemption_caption">Bring the Sticker into the display</string>
    <string name="coupon_redemption_hint_nfc">"1. Look for the sticker at the cash desk \n2. Put you mobile on the sticker \n   (NFC has to be enabled) \n3. Show your mobile to the employee"</string>
    <string name="coupon_redemption_hint_qr">"1. Look for the sticker at the cash desk \n2. Scan the QR-Code to redeem \n3. Show your mobile to the employee"</string>
    <string name="coupon_redemption_error">"No Sticker?"</string>
    <!-- values for cashback redemption (contextView) -->
    <string name="cashback_redemtion_need_what">How to?</string>
    <string name="cashback_redemtion_need_close">Close help</string>
    <string name="cashback_validation_back_btn">No, repeat</string>
    <string name="cashback_validation_remaining_title">Want to redeem this coupon multiple times?</string>
    <!-- Do you want to redeem this coupon multiple times? -->
    <string name="cashback_validation_send_btn">Send</string>
    <string name="cashback_validation_finish_btn">Yes, send</string>
    <string name="cashback_validation_text">Is the full receipt in the photo?</string>
    <string name="cashback_validation_go_on_btn">Yes, go on</string>
    <!-- values for cashback redemption (redemptionView) -->
    <string name="cashback_take_picture_memory_exception">Unfortunately, the memory of your smartphone is full. You should clean your memory by closing all applications and then start COUPIES again.</string>
    <string name="cashback_error_try_again_title">Unexpected error</string>
    <string name="cashback_error_try_again_text">A problem occurred. Please try again.</string>
    <string name="cashback_image_taken_memory_error">Der interne Speicher deines Smartphones ist zu voll, bitte versuch es erneut.</string>
    <string name="cashback_image_file_output_stream_error">Es ist ein Fehler beim konvertieren des Fotos aufgetreten, bitte versuch es erneut.</string>
    <string name="cashback_get_camera_error">Die Kamera deines Smartphones konnte nicht gestartet werden, bitte versuch es erneut.</string>
    <string name="cashback_validation_add_picture_btn">Add\n picture</string>
    <string name="cashback_redemption_help_text_one">Branch address, total and Date of purchase must be visible.</string>
    <string name="cashback_redemption_help_text_two">If the receipt is too long, you can add up to two additional sections.</string>
    <string name="cashback_overlay_help_title_text">RECEIPT</string>
    <string name="cashback_overlay_help_body_text">Bring your receipt in the frame. If the receipt is too long, take a picture of upper part.</string>
</resources>
