<?xml version="1.0" encoding="utf-8"?>
<merge 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
	android:layout_width="fill_parent"
 	android:layout_height="wrap_content">
 	
 	<RelativeLayout android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:orientation="vertical"
 		android:gravity="center_horizontal|bottom"> 
 						         
 		<ImageView  
 		    android:id="@+id/coupon_redemption_help"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:background="@color/white"
			android:layout_gravity="center_horizontal|bottom"
			android:scaleType="fitEnd"
			android:baselineAlignBottom="true"
			android:paddingBottom="80sp"
			android:visibility="gone"
			android:src="@drawable/coupon_redemption_nfc"/>
			
		<TextView android:id="@+id/coupon_redemption_help_text"
			android:text="@string/coupon_redemption_hint_qr" 
			android:layout_margin="12sp"
			android:textSize="16sp"
			android:textColor="@color/black"
			android:layout_gravity="top"
			android:layout_width="fill_parent"
 			android:layout_height="wrap_content" 
 			android:visibility="gone"/>  
			
		<RelativeLayout android:id="@+id/coupon_redemption_context_tab"
			android:layout_alignParentBottom="true"
			android:layout_width="fill_parent"
	 		android:layout_height="80sp"
	 		android:gravity="top"
	 		android:background="@color/background_color">
	 		
	 		<TextView android:text="@string/coupon_redemption_caption"
				android:layout_alignParentTop="true"
				android:layout_margin="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/white"
				android:layout_centerInParent="true"/>
	 			
			<Button android:id="@+id/coupon_redemption_hint"
	 			android:layout_alignParentLeft="true" 
				android:layout_marginLeft="10sp"
				android:layout_width="120sp"
				android:layout_height="40sp"
				android:text="@string/coupon_redemption_hint"
				android:paddingLeft="8sp"				
				android:textColor="@color/white"
				android:gravity="center"
				android:textSize="12sp"
	 			android:layout_marginTop="30dp"
	 			android:layout_marginBottom="5dp"
	 			android:background="@drawable/button_background" />
	 			

			<Button android:id="@+id/coupon_redemption_error"
				android:layout_alignParentRight="true" 
				android:layout_marginRight="10sp"
				android:layout_width="120sp"
				android:layout_height="40sp"
				android:text="@string/coupon_redemption_error"
				android:paddingLeft="8sp"
				android:textColor="@color/white"
				android:gravity="center"
				android:textSize="12sp"
				android:layout_marginTop="30dp" 			
	 			android:layout_marginBottom="5dp"
				android:background="@drawable/button_background" /> 		
					
		</RelativeLayout>

	</RelativeLayout>
        
</merge>
        