<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/custom_dialog_placeholder_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible" >

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/custom_dialog_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <de.coupies.framework.controller.redemption.SaundProgressBar
            android:id="@+id/custom_dialog_progress_bar"
            style="@style/Widget.ProgressBar.MiniProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:minHeight="25sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:background="@color/transparent" >

            <TextView
                android:id="@+id/progressbar_upload_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/progressbar_percentage_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <TextView
            android:id="@+id/custom_dialog_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/custom_dialog_progress_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/transfer_success_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/white"
	    android:gravity="top"
	    android:orientation="vertical"
	    android:visibility="gone" >
	
	    <ImageView
	        android:id="@+id/success_image_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="38dp"
	        android:paddingBottom="15sp"
	        android:src="@drawable/cashback_redemption_success_hook"
	        android:contentDescription="success_image_send" />
	
	    <TextView
	        android:id="@+id/success_header_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5sp"
	        android:layout_marginBottom="5sp"
	        android:layout_marginLeft="20sp"
	        android:layout_marginRight="20sp"
	        android:text="@string/cashback_image_send_ok_text_1"
	        android:textColor="@color/light_green"
	        android:layout_gravity="center_horizontal"
	        android:textSize="20sp"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/success_discription_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="20sp"
	        android:text="@string/cashback_image_send_ok_text_2"
	         android:layout_gravity="center_horizontal"
	        android:textColor="@color/light_green"
	        android:textSize="20sp" />
	    
    </LinearLayout>

</LinearLayout>
